--- a/index.html
+++ b/index.html
@@ -50,12 +50,10 @@
       "DECLARAÇÃO DE INEXISTENCIA DE AÇÃO AUX": "https://drive.google.com/file/d/1rt4tOVPEQuU7Nj1mHEIMlx25L2ZqaXjp/view?usp=drive_link"
     };
 
-    // Função que processa o valor das pendências:
-    // Se houver vírgula, trata cada item separadamente
+    // Função que processa o valor das pendências.
+    // Se houver múltiplos itens separados por vírgula, cada um é tratado individualmente.
     function getPendenciaLinkHTML(value, mapping) {
-      // Separa os itens usando vírgula
       const itens = value.split(',').map(item => item.trim()).filter(item => item !== "");
-      // Para cada item, se houver mapeamento, retorna o item como link; senão, apenas o texto
       const processados = itens.map(item => {
         const itemUpper = item.toUpperCase();
         if (mapping[itemUpper]) {
@@ -64,7 +62,6 @@
           return `<span class="value">${item}</span>`;
         }
       });
-      // Junta os itens processados, separados por <br> para melhor visualização
       return processados.join("<br>");
     }
 
@@ -218,7 +215,14 @@
             html += `<div class="card"><span class="label">Pendências:</span> ${getPendenciaLinkHTML(docVPE.Pendencias, pendenciaLinksVPE)}</div>`;
           }
           if (docVPE["RÚBRICA"]) {
-            html += `<div class="card"><span class="label">Rúbrica:</span> <span class="value">${docVPE["RÚBRICA"]}</span></div>`;
+            let rubricaVal = docVPE["RÚBRICA"].trim();
+            let rubricaFormatted = `<span class="value">${rubricaVal}</span>`;
+            if (rubricaVal.toUpperCase() === "NÃO RECEBE") {
+              rubricaFormatted = `<span class="value" style="color: red;">${rubricaVal}</span>`;
+            } else if (rubricaVal.toUpperCase() === "RECEBE") {
+              rubricaFormatted = `<span class="value" style="color: green;">${rubricaVal}</span>`;
+            }
+            html += `<div class="card"><span class="label">Rúbrica:</span> ${rubricaFormatted}</div>`;
           }
         }
         html += `</div>`;
@@ -352,7 +356,7 @@
   <div class="container">
     <h1>Consultar Documentação</h1>
     <div class="form-group">
-      <input type="text" id="cpf" placeholder="Digite seu CPF (com ou sem . e -)" />
+      <input type="text" id="cpf" placeholder="Digite seu CPF" />
       <button onclick="consultarCPF()">Consultar</button>
     </div>
     <div id="resultados"></div>
