--- a/index.html
+++ b/index.html
@@ -409,6 +409,7 @@
     /* Estilo para o box de alerta (status DESLIGADO) */
     .alert-box {
       margin-top: 20px;
+      margin-bottom: 20px; /* Espaço inferior adicionado */
       padding: 15px;
       border: 1px solid #e74c3c;
       border-radius: 6px;
