--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
           html += `<div class="card"><span class="label">Documentação:</span> ${formatValue(results.auxilioMoradia.documentacao, 'documentacao')}</div>`;
         }
         if (results.auxilioMoradia.amfeta) {
-          html += `<div class="card"><span class="label">Listagem 2008:</span> <span class="value">${results.auxilioMoradia.amfeta}</span></div>`;
+          html += `<div class="card"><span class="label">Relação de 2008:</span> <span class="value">${results.auxilioMoradia.amfeta}</span></div>`;
         }
         if (results.auxilioMoradia.protocolo) {
           html += `<div class="card"><span class="label">Número de processo:</span> <span class="value">${results.auxilioMoradia.protocolo}</span></div>`;
@@ -431,7 +431,7 @@
           html += `<div class="card"><span class="label">Listagem:</span> <span class="value">${results.vpe.listagem}</span></div>`;
         }
         if (results.vpe.amfeta) {
-          html += `<div class="card"><span class="label">Listagem 2008:</span> <span class="value">${results.vpe.amfeta}</span></div>`;
+          html += `<div class="card"><span class="label">Relação de 2008:</span> <span class="value">${results.vpe.amfeta}</span></div>`;
         }
         html += `</div>`;
       }
