--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
     
     /* Estilos para os boxes de alerta e informação */
     .alert-box {
-      margin-top: 20px;
+      margin: 20px 0;
       padding: 15px;
       border: 1px solid #e74c3c;
       border-radius: 8px;
