--- a/index.html
+++ b/index.html
@@ -4,15 +4,58 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Consulta de Documentação</title>
-  <!-- Bootstrap CSS para estilo moderno -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+  <!-- Bootstrap 5 CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <!-- Google Fonts: Roboto -->
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
   <style>
     body {
-      background: #f8f9fa;
+      background-color: #f0f2f5;
+      font-family: 'Roboto', sans-serif;
       padding-top: 20px;
     }
+    .container {
+      max-width: 600px;
+    }
     .card {
+      border: none;
+      border-radius: 10px;
+      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
       margin-bottom: 20px;
+      background-color: #ffffff;
+    }
+    .card-header {
+      background-color: #ffffff;
+      border-bottom: none;
+      text-align: center;
+      font-weight: 500;
+    }
+    .card-body {
+      text-align: center;
+    }
+    h1 {
+      text-align: center;
+      margin-bottom: 30px;
+      font-weight: 500;
+      color: #333;
+    }
+    input#cpfInput {
+      text-align: center;
+    }
+    .btn-primary {
+      background-color: #4a90e2;
+      border: none;
+      font-weight: 500;
+    }
+    .btn-primary:hover {
+      background-color: #357ab8;
+    }
+    a {
+      color: #4a90e2;
+      text-decoration: none;
+    }
+    a:hover {
+      text-decoration: underline;
     }
     .status-ativo {
       color: green;
@@ -26,14 +69,16 @@
 </head>
 <body>
   <div class="container">
-    <h1 class="text-center mb-4">CONSULTA DE DOCUMENTAÇÃO</h1>
-    <div class="form-group">
-      <label for="cpfInput">CPF</label>
+    <h1>CONSULTA DE DOCUMENTAÇÃO</h1>
+    <div class="mb-3">
+      <label for="cpfInput" class="form-label">CPF</label>
       <input type="text" id="cpfInput" class="form-control" placeholder="Digite seu CPF (com ou sem pontuação)">
     </div>
-    <button id="consultBtn" class="btn btn-primary">CONSULTAR</button>
+    <div class="d-grid mb-4">
+      <button id="consultBtn" class="btn btn-primary">CONSULTAR</button>
+    </div>
     
-    <div id="resultContainer" class="mt-4"></div>
+    <div id="resultContainer"></div>
   </div>
 
   <!-- Firebase App e Firestore (versão modular) -->
@@ -259,8 +304,7 @@
     document.getElementById("consultBtn").addEventListener("click", consultarCPF);
   </script>
 
-  <!-- Bootstrap JS e dependências (opcional) -->
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/js/bootstrap.bundle.min.js"></script>
+  <!-- Bootstrap Bundle JS -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
